---------------------------------------------------------------------------------------------------
Version: 1.2.5
Date: 5-4-2025
  Changes:
    - Corrected fluorketone hot and cold badges, which were swapped
    - Added K2 Compatibility
---------------------------------------------------------------------------------------------------
Version: 1.2.4
Date: 3-12-2025
  Changes:
    - Added Hidden Worlds tweak
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 3-04-2025
  Changes:
    - Removed SA version requirement
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 3-04-2025
  Changes:
    - Fixed version requirement
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2-25-2025
  Changes:
    - Updating to 2.0 / SA
    - Changed 'Ib_global.badge_vanilla' to 'Ib_global.perform_default_badging'
    - Some unbadged vanilla icons are badged in SA
    - K2 compat not guaranteed to work right now
---------------------------------------------------------------------------------------------------
Version: 1.1.09
Date: 4-22-2024
  Changes:
    - Fixed crash bug with Galdoc's Manufacturing when set to "Only Belts" because testing amirite
---------------------------------------------------------------------------------------------------
Version: 1.1.08
Date: 3-29-2024
  Changes:
    - Various tweaks and bugfixes
---------------------------------------------------------------------------------------------------
Version: 1.1.07
Date: 2-12-2024
  Changes:
    - Various tweaks and bugfixes
---------------------------------------------------------------------------------------------------
Version: 1.1.06
Date: 2-07-2024
  Changes:
    - Re-tooled the mod to expose Build_badge(prototype, ib_data) function to modders
    - "ib_active" removed, and replaced with ...